[gd_scene load_steps=129 format=3 uid="uid://bfghle0qsaduw"]

[ext_resource type="Script" path="res://Scene/ConstructMap/Contsr.gd" id="1_p3e7k"]
[ext_resource type="Environment" uid="uid://bvy1jx3l4sjxp" path="res://Environment.tres" id="2_1uglm"]
[ext_resource type="PackedScene" uid="uid://dcvdg6hni2i7j" path="res://TitlePart3D/ConstMap.tscn" id="2_i8dg5"]
[ext_resource type="Shader" path="res://Shader/blur.gdshader" id="3_7b42q"]
[ext_resource type="Texture2D" uid="uid://b7fdxygbc6srs" path="res://TitlePart2D/ConstMap/ItemList/Background.png" id="4_xvup4"]
[ext_resource type="Texture2D" uid="uid://bjv4sta2kjprg" path="res://TitlePart2D/Menu/icon/Rectangle 7.png" id="5_nyswa"]
[ext_resource type="Texture2D" uid="uid://dwsv3doyxkh6w" path="res://TitlePart2D/ConstMap/ItemList/forward.png" id="6_f226r"]
[ext_resource type="Texture2D" uid="uid://dnsstbmlctic3" path="res://TitlePart2D/ConstMap/ItemList/rotate.png" id="7_vlgto"]
[ext_resource type="Texture2D" uid="uid://qb76vr3xiu0m" path="res://TitlePart2D/ConstMap/ItemList/marker.png" id="8_rwdxq"]
[ext_resource type="Texture2D" uid="uid://qw0x76iqqx4u" path="res://TitlePart2D/ConstMap/ItemList/finish.png" id="9_tg18e"]
[ext_resource type="Texture2D" uid="uid://bjj1whsh331kk" path="res://TitlePart2D/ConstMap/ItemList/checkpoint.png" id="10_7qsqm"]
[ext_resource type="Texture2D" uid="uid://bfxp3lajsjad8" path="res://TitlePart2D/ConstMap/ItemList/square.png" id="12_bxax6"]
[ext_resource type="Texture2D" uid="uid://de4nx1x1gtbek" path="res://TitlePart2D/ConstMap/ItemList/properties/Rgb.png" id="13_y8gev"]
[ext_resource type="Script" path="res://Scene/ConstructMap/ColorPickerButton.gd" id="14_3fur4"]
[ext_resource type="Texture2D" uid="uid://cheawvpqglxjk" path="res://TitlePart2D/ConstMap/ItemList/properties/white.png" id="15_w5avm"]
[ext_resource type="Texture2D" uid="uid://bbc281tv8bm2g" path="res://TitlePart2D/ConstMap/ItemList/checkbox/white.png" id="16_2ly13"]
[ext_resource type="Texture2D" uid="uid://b7644x2vbexy" path="res://TitlePart2D/ConstMap/ItemList/button/normal/add.png" id="17_vxhlb"]
[ext_resource type="Texture2D" uid="uid://cpe2osjygtg5j" path="res://TitlePart2D/ConstMap/ItemList/button/pressed/add_pressed.png" id="18_cqoo1"]
[ext_resource type="Texture2D" uid="uid://3lh6w5c2ai5o" path="res://TitlePart2D/ConstMap/ItemList/button/focus/save_focus.png" id="19_bjos6"]
[ext_resource type="Texture2D" uid="uid://dc4elpdl3nxwi" path="res://TitlePart2D/ConstMap/ItemList/button/hover/save_hover.png" id="20_mu183"]
[ext_resource type="Texture2D" uid="uid://ghkicyjps4be" path="res://TitlePart2D/ConstMap/ItemList/button/normal/save.png" id="21_ks8kl"]
[ext_resource type="Texture2D" uid="uid://cxoq882jqm30x" path="res://TitlePart2D/ConstMap/ItemList/button/pressed/save_pressed.png" id="22_ucsay"]
[ext_resource type="Texture2D" uid="uid://bjm2cgdy01ab5" path="res://TitlePart2D/ConstMap/ItemList/button/focus/back_focus.png" id="23_e6b2f"]
[ext_resource type="Texture2D" uid="uid://bwuxsy3a6lbnt" path="res://TitlePart2D/ConstMap/ItemList/button/hover/back_hover.png" id="24_obqww"]
[ext_resource type="Texture2D" uid="uid://dt5oss5alkn10" path="res://TitlePart2D/ConstMap/ItemList/button/normal/back.png" id="25_rtvaf"]
[ext_resource type="Texture2D" uid="uid://yhh7i3op2dft" path="res://TitlePart2D/ConstMap/ItemList/button/pressed/back_pressed.png" id="26_7p1lc"]
[ext_resource type="Texture2D" uid="uid://d1nyvrbaa1eud" path="res://TitlePart2D/ConstMap/ItemList/button/focus/loadmaps_focus.png" id="27_tf3n1"]
[ext_resource type="Texture2D" uid="uid://oml6774maijj" path="res://TitlePart2D/ConstMap/ItemList/button/hover/loadmaps_hover.png" id="28_uunjp"]
[ext_resource type="Texture2D" uid="uid://bro8ob2gij1l" path="res://TitlePart2D/ConstMap/ItemList/button/normal/loadmaps.png" id="29_ppkyf"]
[ext_resource type="Texture2D" uid="uid://dgbaxm60sn5n0" path="res://TitlePart2D/ConstMap/ItemList/button/pressed/loadmaps_pressed.png" id="30_8o6yf"]
[ext_resource type="Texture2D" uid="uid://ca3lc4rojscw2" path="res://TitlePart2D/ConstMap/popupMenu/loadmap.png" id="31_dx036"]
[ext_resource type="Texture2D" uid="uid://dgryrosr1d3r5" path="res://TitlePart2D/ConstMap/popupMenu/btnOk/hoverOKey.png" id="32_mx4ed"]
[ext_resource type="Texture2D" uid="uid://fypb7a11hj4r" path="res://TitlePart2D/ConstMap/popupMenu/btnOk/normalOKey.png" id="33_6wl5i"]
[ext_resource type="Texture2D" uid="uid://bxhqts4e7s120" path="res://TitlePart2D/ConstMap/popupMenu/btnOk/pressedOKey.png" id="34_dweni"]
[ext_resource type="Texture2D" uid="uid://bptorhsmdiri1" path="res://TitlePart2D/ConstMap/popupMenu/btnCancel/hoverCancel.png" id="35_mc5yf"]
[ext_resource type="Texture2D" uid="uid://dnvvpfaprht7q" path="res://TitlePart2D/ConstMap/popupMenu/btnCancel/normalCancel.png" id="36_11j2l"]
[ext_resource type="Texture2D" uid="uid://tgcx68ti3fr0" path="res://TitlePart2D/ConstMap/popupMenu/btnCancel/pressedCancel.png" id="37_lf7gm"]
[ext_resource type="Texture2D" uid="uid://c76os3seaw2i1" path="res://TitlePart2D/ConstMap/popupMenu/savemap.png" id="38_erbrx"]
[ext_resource type="FontFile" uid="uid://b4emn1rakq1q1" path="res://fonts/Inter-Light.ttf" id="39_r7a0d"]
[ext_resource type="Texture2D" uid="uid://ddnc5ocgdaia3" path="res://TitlePart2D/ConstMap/popupMenu/lineedit focus.png" id="40_1q8kw"]
[ext_resource type="Texture2D" uid="uid://g0w6k4o4upmo" path="res://TitlePart2D/ConstMap/popupMenu/line editnormal.png" id="41_ldssm"]

[sub_resource type="World3D" id="World3D_u8hhp"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7g6y0"]
shader = ExtResource("3_7b42q")
shader_parameter/amount = 3.936

[sub_resource type="FontVariation" id="FontVariation_yvxa6"]

[sub_resource type="Theme" id="Theme_00oyi"]
Label/fonts/font = SubResource("FontVariation_yvxa6")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ohimh"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 44
corner_radius_top_right = 44
corner_radius_bottom_right = 44
corner_radius_bottom_left = 44

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3swe2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qb2nl"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2dvul"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_unlb8"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ssl8w"]
texture = ExtResource("5_nyswa")

[sub_resource type="Theme" id="Theme_fwxew"]
ItemList/styles/cursor = SubResource("StyleBoxEmpty_3swe2")
ItemList/styles/cursor_unfocused = SubResource("StyleBoxEmpty_qb2nl")
ItemList/styles/focus = SubResource("StyleBoxEmpty_2dvul")
ItemList/styles/panel = SubResource("StyleBoxEmpty_unlb8")
ItemList/styles/selected = SubResource("StyleBoxTexture_ssl8w")
ItemList/styles/selected_focus = SubResource("StyleBoxTexture_ssl8w")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_h0pip"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ahsm5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_un6rx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dknb6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jkd2f"]

[sub_resource type="Theme" id="Theme_ns33b"]
BoxContainer/constants/separation = 4
ColorPresetButton/styles/preset_fg = SubResource("StyleBoxEmpty_ahsm5")
Panel/styles/panel = SubResource("StyleBoxEmpty_un6rx")
PopupPanel/styles/panel = SubResource("StyleBoxEmpty_dknb6")
TooltipPanel/styles/panel = SubResource("StyleBoxEmpty_jkd2f")
VBoxContainer/constants/separation = 4

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_mn1b4"]
load_path = "res://.godot/imported/black.png-e32d73c4037bfd8763216d50af89586c.bptc.ctex"

[sub_resource type="Theme" id="Theme_ksfgi"]
CheckButton/icons/checked = SubResource("CompressedTexture2D_mn1b4")
CheckButton/icons/unchecked = ExtResource("16_2ly13")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_q1amb"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ifcdx"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_m8w6m"]
load_path = "res://.godot/imported/add_focus.png-c7aeb12ae7c8062bc5947307823c761b.bptc.ctex"

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8s57v"]
texture = SubResource("CompressedTexture2D_m8w6m")
region_rect = Rect2(0, 0, 74, 74)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_6uath"]
load_path = "res://.godot/imported/add_hover.png-c72a5382d94ccf3355f3982a0e6c0ee8.bptc.ctex"

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_1gjbj"]
texture = SubResource("CompressedTexture2D_6uath")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_eo3d1"]
texture = ExtResource("17_vxhlb")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_hk0xk"]
texture = ExtResource("18_cqoo1")
region_rect = Rect2(0, 0, 74, 74)

[sub_resource type="Theme" id="Theme_ctsyg"]
Button/styles/disabled = SubResource("StyleBoxEmpty_ifcdx")
Button/styles/focus = SubResource("StyleBoxTexture_8s57v")
Button/styles/hover = SubResource("StyleBoxTexture_1gjbj")
Button/styles/normal = SubResource("StyleBoxTexture_eo3d1")
Button/styles/pressed = SubResource("StyleBoxTexture_hk0xk")

[sub_resource type="ButtonGroup" id="ButtonGroup_hmfvx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qdjn8"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_60qrb"]
texture = ExtResource("19_bjos6")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_0220s"]
texture = ExtResource("20_mu183")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8acc6"]
texture = ExtResource("21_ks8kl")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_dygkp"]
texture = ExtResource("22_ucsay")

[sub_resource type="Theme" id="Theme_w8512"]
Button/styles/disabled = SubResource("StyleBoxEmpty_qdjn8")
Button/styles/focus = SubResource("StyleBoxTexture_60qrb")
Button/styles/hover = SubResource("StyleBoxTexture_0220s")
Button/styles/normal = SubResource("StyleBoxTexture_8acc6")
Button/styles/pressed = SubResource("StyleBoxTexture_dygkp")

[sub_resource type="ViewportTexture" id="ViewportTexture_6ndaf"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_vu5hs"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_lsf5c"]
texture = ExtResource("23_e6b2f")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_pe1j6"]
texture = ExtResource("24_obqww")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_jg7cy"]
texture = ExtResource("25_rtvaf")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_5cgxb"]
texture = ExtResource("26_7p1lc")

[sub_resource type="Theme" id="Theme_oh6gp"]
Button/styles/disabled = SubResource("StyleBoxTexture_vu5hs")
Button/styles/focus = SubResource("StyleBoxTexture_lsf5c")
Button/styles/hover = SubResource("StyleBoxTexture_pe1j6")
Button/styles/normal = SubResource("StyleBoxTexture_jg7cy")
Button/styles/pressed = SubResource("StyleBoxTexture_5cgxb")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6rofr"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_15ve4"]
texture = ExtResource("27_tf3n1")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_h2e01"]
texture = ExtResource("28_uunjp")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_yfsxm"]
texture = ExtResource("29_ppkyf")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_0tpw7"]
texture = ExtResource("30_8o6yf")

[sub_resource type="Theme" id="Theme_drevl"]
Button/styles/disabled = SubResource("StyleBoxEmpty_6rofr")
Button/styles/focus = SubResource("StyleBoxTexture_15ve4")
Button/styles/hover = SubResource("StyleBoxTexture_h2e01")
Button/styles/normal = SubResource("StyleBoxTexture_yfsxm")
Button/styles/pressed = SubResource("StyleBoxTexture_0tpw7")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_l5kpv"]
shader = ExtResource("3_7b42q")
shader_parameter/amount = 5.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1jdsd"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3nyvp"]
shader = ExtResource("3_7b42q")
shader_parameter/amount = 3.9

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ld3kb"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 28
corner_radius_top_right = 28
corner_radius_bottom_right = 28
corner_radius_bottom_left = 28

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qprw6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1qvpa"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8h5qg"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bj71t"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xysl5"]

[sub_resource type="Theme" id="Theme_huhvt"]
VScrollBar/styles/grabber = SubResource("StyleBoxEmpty_qprw6")
VScrollBar/styles/grabber_highlight = SubResource("StyleBoxEmpty_1qvpa")
VScrollBar/styles/grabber_pressed = SubResource("StyleBoxEmpty_8h5qg")
VScrollBar/styles/scroll = SubResource("StyleBoxEmpty_bj71t")
VScrollBar/styles/scroll_focus = SubResource("StyleBoxEmpty_xysl5")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3iam7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6f8ik"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_6ut3a"]
texture = ExtResource("32_mx4ed")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_qwe80"]
texture = ExtResource("33_6wl5i")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ajr35"]
texture = ExtResource("34_dweni")

[sub_resource type="Theme" id="Theme_aeqg2"]
Button/styles/disabled = SubResource("StyleBoxEmpty_3iam7")
Button/styles/focus = SubResource("StyleBoxEmpty_6f8ik")
Button/styles/hover = SubResource("StyleBoxTexture_6ut3a")
Button/styles/normal = SubResource("StyleBoxTexture_qwe80")
Button/styles/pressed = SubResource("StyleBoxTexture_ajr35")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_sje3b"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ndhwk"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_3uyqu"]
texture = ExtResource("35_mc5yf")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_qlnjq"]
texture = ExtResource("36_11j2l")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_gok81"]
texture = ExtResource("37_lf7gm")

[sub_resource type="Theme" id="Theme_r0lon"]
Button/styles/disabled = SubResource("StyleBoxEmpty_sje3b")
Button/styles/focus = SubResource("StyleBoxEmpty_ndhwk")
Button/styles/hover = SubResource("StyleBoxTexture_3uyqu")
Button/styles/normal = SubResource("StyleBoxTexture_qlnjq")
Button/styles/pressed = SubResource("StyleBoxTexture_gok81")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2deyx"]
shader = ExtResource("3_7b42q")
shader_parameter/amount = 3.9

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gvdu8"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 28
corner_radius_top_right = 28
corner_radius_bottom_right = 28
corner_radius_bottom_left = 28

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_y8is7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bov2c"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_smcyn"]
texture = ExtResource("32_mx4ed")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_5sk8f"]
texture = ExtResource("32_mx4ed")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_rpoux"]
texture = ExtResource("34_dweni")

[sub_resource type="Theme" id="Theme_ps1wh"]
Button/styles/disabled = SubResource("StyleBoxEmpty_y8is7")
Button/styles/focus = SubResource("StyleBoxEmpty_bov2c")
Button/styles/hover = SubResource("StyleBoxTexture_smcyn")
Button/styles/normal = SubResource("StyleBoxTexture_5sk8f")
Button/styles/pressed = SubResource("StyleBoxTexture_rpoux")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_elf7b"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qkmwd"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_nlwvb"]
texture = ExtResource("35_mc5yf")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_1sddt"]
texture = ExtResource("36_11j2l")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_41g46"]
texture = ExtResource("37_lf7gm")

[sub_resource type="Theme" id="Theme_q54lm"]
Button/styles/disabled = SubResource("StyleBoxEmpty_elf7b")
Button/styles/focus = SubResource("StyleBoxEmpty_qkmwd")
Button/styles/hover = SubResource("StyleBoxTexture_nlwvb")
Button/styles/normal = SubResource("StyleBoxTexture_1sddt")
Button/styles/pressed = SubResource("StyleBoxTexture_41g46")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_pubyi"]
texture = ExtResource("40_1q8kw")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_jghg6"]
texture = ExtResource("41_ldssm")

[sub_resource type="Theme" id="Theme_mv51d"]
TextEdit/constants/line_spacing = 8
TextEdit/constants/outline_size = 0
TextEdit/fonts/font = ExtResource("39_r7a0d")
TextEdit/styles/focus = SubResource("StyleBoxTexture_pubyi")
TextEdit/styles/normal = SubResource("StyleBoxTexture_jghg6")

[node name="RootLayer" type="CanvasLayer"]
script = ExtResource("1_p3e7k")

[node name="Root3D" type="Node3D" parent="."]

[node name="WorldEnvironment" type="WorldEnvironment" parent="Root3D"]
environment = ExtResource("2_1uglm")

[node name="SubViewportContainer" type="SubViewportContainer" parent="Root3D"]
offset_left = -1.99994
offset_top = -3.0
offset_right = 1918.0
offset_bottom = 1077.0

[node name="SubViewport" type="SubViewport" parent="Root3D/SubViewportContainer"]
world_3d = SubResource("World3D_u8hhp")
handle_input_locally = false
use_taa = true
canvas_item_default_texture_repeat = 1
size = Vector2i(1920, 1080)
render_target_update_mode = 4

[node name="ConstMap" parent="Root3D/SubViewportContainer/SubViewport" groups=["save"] instance=ExtResource("2_i8dg5")]

[node name="PanelBlur" type="Panel" parent="Root3D"]
material = SubResource("ShaderMaterial_7g6y0")
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -588.0
offset_top = -402.0
offset_bottom = 402.0
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 10
theme = SubResource("Theme_00oyi")
theme_override_styles/panel = SubResource("StyleBoxFlat_ohimh")

[node name="TextureRect" type="TextureRect" parent="Root3D/PanelBlur"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -294.0
offset_top = -436.0
offset_right = 302.0
offset_bottom = 412.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_xvup4")

[node name="ItemList" type="ItemList" parent="Root3D/PanelBlur/TextureRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 0.125
offset_left = -247.5
offset_top = 106.0
offset_right = 247.5
offset_bottom = 485.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_fwxew")
theme_override_styles/cursor_unfocused = SubResource("StyleBoxEmpty_h0pip")
allow_rmb_select = true
text_overrun_behavior = 4
item_count = 6
max_columns = 3
same_column_width = true
fixed_column_width = 157
fixed_icon_size = Vector2i(157, 157)
item_0/text = ""
item_0/icon = ExtResource("6_f226r")
item_1/text = ""
item_1/icon = ExtResource("7_vlgto")
item_2/text = ""
item_2/icon = ExtResource("8_rwdxq")
item_3/text = ""
item_3/icon = ExtResource("9_tg18e")
item_4/text = ""
item_4/icon = ExtResource("10_7qsqm")
item_5/text = ""
item_5/icon = ExtResource("12_bxax6")

[node name="TextureRGB" type="TextureRect" parent="Root3D/PanelBlur/TextureRect"]
layout_mode = 0
offset_left = 300.0
offset_top = 701.0
offset_right = 455.0
offset_bottom = 758.0
texture = ExtResource("13_y8gev")

[node name="RGB" type="ColorPickerButton" parent="Root3D/PanelBlur/TextureRect/TextureRGB"]
custom_minimum_size = Vector2(36, 35)
layout_mode = 0
offset_left = 31.0
offset_top = 8.0
offset_right = 67.0
offset_bottom = 43.0
theme = SubResource("Theme_ns33b")
script = ExtResource("14_3fur4")

[node name="TextureWB" type="TextureRect" parent="Root3D/PanelBlur/TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -156.0
offset_top = 277.0
offset_right = -1.0
offset_bottom = 334.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("15_w5avm")

[node name="WB" type="CheckButton" parent="Root3D/PanelBlur/TextureRect/TextureWB"]
layout_mode = 1
offset_left = 24.0
offset_top = 6.0
offset_right = 91.0
offset_bottom = 45.0
theme = SubResource("Theme_ksfgi")
theme_override_styles/focus = SubResource("StyleBoxEmpty_q1amb")

[node name="ToolBar" type="HBoxContainer" parent="Root3D/PanelBlur/TextureRect"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -77.0
offset_top = -75.0
offset_right = 77.0
grow_horizontal = 2
grow_vertical = 0

[node name="btn_add" type="Button" parent="Root3D/PanelBlur/TextureRect/ToolBar"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
theme = SubResource("Theme_ctsyg")
toggle_mode = true
button_group = SubResource("ButtonGroup_hmfvx")

[node name="btn_save" type="Button" parent="Root3D/PanelBlur/TextureRect/ToolBar"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.0
theme = SubResource("Theme_w8512")
toggle_mode = true
button_group = SubResource("ButtonGroup_hmfvx")
icon = SubResource("ViewportTexture_6ndaf")

[node name="btn_back" type="Button" parent="Root3D/PanelBlur/TextureRect/ToolBar"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.0
theme = SubResource("Theme_oh6gp")
toggle_mode = true
button_group = SubResource("ButtonGroup_hmfvx")

[node name="btn_load" type="Button" parent="Root3D/PanelBlur/TextureRect/ToolBar"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.0
theme = SubResource("Theme_drevl")
toggle_mode = true
button_group = SubResource("ButtonGroup_hmfvx")

[node name="Label" type="Label" parent="Root3D/PanelBlur/TextureRect"]
layout_mode = 0
offset_left = 51.0
offset_top = 591.0
offset_right = 543.0
offset_bottom = 647.0

[node name="PanelBlur2" type="Panel" parent="Root3D/PanelBlur"]
visible = false
material = SubResource("ShaderMaterial_l5kpv")
layout_mode = 0
offset_left = -1342.0
offset_top = -142.0
offset_right = 600.0
offset_bottom = 918.0
theme_override_styles/panel = SubResource("StyleBoxFlat_1jdsd")

[node name="PanelBlur3" type="Panel" parent="Root3D/PanelBlur"]
visible = false
material = SubResource("ShaderMaterial_3nyvp")
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -874.0
offset_top = -248.0
offset_right = -458.0
offset_bottom = 168.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_ld3kb")

[node name="TextureRect" type="TextureRect" parent="Root3D/PanelBlur/PanelBlur3"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -208.0
offset_top = -208.0
offset_right = 208.0
offset_bottom = 208.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("31_dx036")

[node name="ScrollContainer" type="ScrollContainer" parent="Root3D/PanelBlur/PanelBlur3/TextureRect"]
layout_mode = 0
offset_left = 96.0
offset_top = 109.0
offset_right = 333.0
offset_bottom = 318.0

[node name="VScrollBar" type="VBoxContainer" parent="Root3D/PanelBlur/PanelBlur3/TextureRect/ScrollContainer"]
layout_mode = 2
theme = SubResource("Theme_huhvt")
theme_override_constants/separation = 45

[node name="btn_ok" type="Button" parent="Root3D/PanelBlur/PanelBlur3/TextureRect"]
layout_mode = 0
offset_left = 22.0
offset_top = 351.0
offset_right = 141.0
offset_bottom = 389.0
theme = SubResource("Theme_aeqg2")

[node name="btn_load" type="Button" parent="Root3D/PanelBlur/PanelBlur3/TextureRect"]
layout_mode = 0
offset_left = 273.0
offset_top = 351.0
offset_right = 392.0
offset_bottom = 389.0
theme = SubResource("Theme_r0lon")

[node name="PanelBlur4" type="Panel" parent="Root3D/PanelBlur"]
visible = false
material = SubResource("ShaderMaterial_2deyx")
layout_mode = 0
offset_left = -597.0
offset_top = 239.0
offset_right = -246.0
offset_bottom = 532.0
theme_override_styles/panel = SubResource("StyleBoxFlat_gvdu8")

[node name="TextureRect" type="TextureRect" parent="Root3D/PanelBlur/PanelBlur4"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("38_erbrx")

[node name="OK" type="Button" parent="Root3D/PanelBlur/PanelBlur4/TextureRect"]
layout_mode = 0
offset_left = 18.0
offset_top = 226.0
offset_right = 137.0
offset_bottom = 264.0
theme = SubResource("Theme_ps1wh")

[node name="Cancel" type="Button" parent="Root3D/PanelBlur/PanelBlur4/TextureRect"]
layout_mode = 0
offset_left = 213.0
offset_top = 222.0
offset_right = 332.0
offset_bottom = 260.0
theme = SubResource("Theme_q54lm")

[node name="TextEdit" type="TextEdit" parent="Root3D/PanelBlur/PanelBlur4/TextureRect"]
layout_mode = 0
offset_left = 58.0
offset_top = 126.0
offset_right = 310.0
offset_bottom = 164.31
theme = SubResource("Theme_mv51d")
placeholder_text = "Map name
"

[connection signal="item_selected" from="Root3D/PanelBlur/TextureRect/ItemList" to="." method="_on_item_list_item_selected"]
[connection signal="color_changed" from="Root3D/PanelBlur/TextureRect/TextureRGB/RGB" to="." method="_on_rgb_color_changed"]
[connection signal="toggled" from="Root3D/PanelBlur/TextureRect/TextureWB/WB" to="." method="_on_wb_toggled"]
[connection signal="button_down" from="Root3D/PanelBlur/TextureRect/ToolBar/btn_add" to="." method="_on_add_button_down"]
[connection signal="button_down" from="Root3D/PanelBlur/TextureRect/ToolBar/btn_save" to="." method="_on_save_button_down"]
[connection signal="pressed" from="Root3D/PanelBlur/TextureRect/ToolBar/btn_back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Root3D/PanelBlur/TextureRect/ToolBar/btn_load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="Root3D/PanelBlur/PanelBlur3/TextureRect/btn_ok" to="." method="_on_o_kload_pressed"]
[connection signal="pressed" from="Root3D/PanelBlur/PanelBlur3/TextureRect/btn_load" to="." method="_on_cancelload_pressed"]
[connection signal="hidden" from="Root3D/PanelBlur/PanelBlur4" to="." method="_on_panel_hidden"]
[connection signal="pressed" from="Root3D/PanelBlur/PanelBlur4/TextureRect/OK" to="." method="_on_ok_pressed"]
[connection signal="pressed" from="Root3D/PanelBlur/PanelBlur4/TextureRect/Cancel" to="." method="_on_cancel_pressed"]
